--- a/src/css/ComplexTrends.css
+++ b/src/css/ComplexTrends.css
@@ -1,3 +1,29 @@
+.App-logo {
+  animation: App-logo-spin infinite 5s linear;
+  height: 80px;
+}
+
+.big-canvas {
+  margin-bottom: 2%;
+}
+
+.canvas {
+  border-radius: 5px;
+}
+
+.show-grid {
+  margin: 2% 0;
+}
+
+.trend {
+  text-align: center;
+}
+
+h4 {
+  color: #fff;
+  background-color: #000;
+  border-radius: 5px;
+}
 @keyframes App-logo-spin {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
