--- a/src/css/Sources.css
+++ b/src/css/Sources.css
@@ -1,9 +1,6 @@
 .source > a, .source-header {
     background-color: #222;
     color: white;
-    -webkit-appearance: button;
-    -moz-appearance: button;
-    appearance: button;
     text-decoration: none;
     border-radius: 1px;
 }
@@ -11,3 +8,9 @@
 .source {
     margin-bottom: 2%;
 }
+
+@media (min-width: 1080px) {
+    .source {
+      margin-bottom: 3.1%;
+    }
+  }
